--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,75 @@
 extends layout
 
 block content
-  h1 #{title}
-  ul.list-group
-    each article, i in articles
-      li.list-group-item
-        a(href="/articles/"+article._id)= article.title
-        h5 Written by #{article.author}
-    
+  .container(style=' width: 1500px; margin-top: 100px')
+    .row
+      .col-lg-3
+        #login(style='margin-top:30px')
+          if user
+            #user_index
+              .row
+                .col-lg-5
+                  img(src='../image/smile.png', width='100px', style="margin-left:5px;margin-top:5px")
+                .col-lg-7(style='margin-top:25px')
+                  p 박지민 님
+                  p 알림(1)
+              .row(style='padding-top:2rem')
+                .col-lg-6
+                  button.btn.btn-primary.btn-block(type="button", style='width:100%', onclick="location.href='./mypage'") 내정보
+                .col-lg-6
+                  button.btn.btn-primary.btn-block(type="button" style=' width:100%' onclick="location.href='/users/logout'") 로그아웃
+          else
+            form(method='POST', action='/users/login', style='padding-left:20px')
+              .form-group
+                input.form-control(name='username', type='text', placeholder='아이디')
+              .form-group
+                input.form-control(name='password', type='password', placeholder='비밀번호')
+              div
+                button.btn.btn-primary.btn-block(type='submit', value='Submit') 로그인
+              #but(style='width : 10px flaot = left')
+                button(type="button" onclick="location.href='./forgot'") ID/PW찾기
+                button(type="button" style='margin-left : 10px' onclick="location.href='/users/register'") 회원가입
+        #category
+          p(align='center' style='font-size:1rem') 카테고리
+          button.btn-ctg 식자재
+          button.btn-ctg 즉석식품
+          button.btn-ctg 반찬
+          button.btn-ctg 음료수/아이스크림
+          button.btn-ctg 커피/차
+          button.btn-ctg 해외직구
+          button.btn-ctg 기타
+      
+      // slide bar & banner-
+      #cent-menu.col-lg-8
+        ul.list-group
+          each article, i in articles
+            li.list-group-item
+              a(href="/articles/"+article._id)= article.title
+        
+        button.btn.btn-warning(type='button' style='float:right; width:5rem; margin-right:1rem; margin-bottom:3rem' onclick="location.href='/articles/add'") 방 개설
 
+        // /.row
 
+      .col-lg-1(style='margin-top:50px;')
+        nav.navbar(class='navbar-expand-xl|lg|md|sm')
+          ul.navbar-nav
+            #cur_item
+              h5(style='text-align:center') 최근목록
+                li.nav-item
+                  a.nav-link(href='#', style='color:black')
+                    img(src='images/potato.jpg')
+                    | 알감자
+                li.nav-item
+                  a.nav-link(href='#', style='color:black')
+                    img(src='images/fish.jpg')
+                    //-이 밑에 주석은 혹시 모르니까 남겨놔 주세요~ 
+                    //-img(src='picture/9437d3e417037c1b221518d08832782f')
+                    | 고등어
+                li.nav-item
+                  a.nav-link(href='#', style='color:black')
+                    img(src='images/pororo.jpg')
+                    | 뽀로로 인형
+                li.nav-item
+                  a.nav-link(href='#', style='color:black')
+                    img(src='images/knife.jpg')
+                    | 장미칼
