--- a/views/register.pug
+++ b/views/register.pug
@@ -21,8 +21,7 @@
 //-     br
 //-     input.btn.btn-primary(type='submit',value='Submit')
 
-//- link(href='css/bootstrap.min.css', rel='stylesheet')
-extends layout
+link(href='../css/bootstrap.min.css', rel='stylesheet')
 
 block content
   .container
@@ -65,7 +64,7 @@ block content
           .col-md-4.inputGroupContainer
             .input-group
               span.input-group-addon
-                i.glyphicon.glyphicon-user
+                i.glyphicon.glyphicon-lock
               input.form-control(name='password' placeholder='비밀번호' type='password')
         // Text input
         .form-group
@@ -73,7 +72,7 @@ block content
           .col-md-4.inputGroupContainer
             .input-group
               span.input-group-addon
-                i.glyphicon.glyphicon-user
+                i.glyphicon.glyphicon-question-sign
               input.form-control(name='password2' placeholder='비밀번호 확인' type='password')
         // Text input
         .form-group
