--- a/views/message.pug
+++ b/views/message.pug
@@ -1,4 +1,5 @@
 .messages
   each type in Object.keys(messages)
     each message in messages[type]
-      div(class="alert alert-"+type, style="margin-top:120px") #{message}
+      center
+        div(class="alert alert-"+type, style="margin-top:120px; width:500px") #{message}
