Refactor app.js

--- a/views/add_article.pug
+++ b/views/add_article.pug
@@ -2,12 +2,15 @@ extends layout
 
 block content
   h1 #{title}
-  form(method='POST', action='/articles/add')
+  form(method='POST', action='/articles/add' enctype="multipart/form-data")
     #form-group
       label Title:
       input.form-control(name='title', type='text')
     #form-group
       label Body:
       textarea.form-control(name='body')
+    #form-group
+      label(for="picture") 사진 올리기
+        input.form-control-file.border(type='file' name='picture' required)
     br
     input.btn.btn-primary(type='submit',value='Submit')
