--- a/views/index.pug
+++ b/views/index.pug
@@ -11,9 +11,10 @@ block content
                 .col-lg-5
                   img(src='../image/smile.png', width='100px', style="margin-left:5px;margin-top:5px")
                 .col-lg-7(style='margin-top:25px')
-                  p 박지민 님
-                  p 알림(1)
-              .row(style='padding-top:2rem')
+                  p(style='line-height:0%') #{user.name} 님,
+                  | 환영합니다!
+                  p(style='margin-top:15px') 알림(1)
+              .row(style="padding-top:20px")
                 .col-lg-6
                   button.btn.btn-primary.btn-block(type="button", style='width:100%', onclick="location.href='./mypage'") 내정보
                 .col-lg-6
@@ -45,12 +46,13 @@ block content
           each article, i in articles
             li.list-group-item
               a(href='/articles/'+article._id)= article.title
-        
+              <br> #{article.body}
+              <br> 모집기한 #{article.deadline}
         button.btn.btn-warning(type='button' style='float:right; width:5rem; margin-right:1rem; margin-bottom:3rem' onclick="location.href='/articles/add'") 방 개설
 
         // /.row
 
-      .col-lg-1
+      .col-lg-1(style='margin-top:50px;')
         nav.navbar(class='navbar-expand-xl|lg|md|sm')
           ul.navbar-nav
             #cur_item
