--- a/views/register.pug
+++ b/views/register.pug
@@ -21,7 +21,8 @@
 //-     br
 //-     input.btn.btn-primary(type='submit',value='Submit')
 
-link(href='../css/bootstrap.min.css', rel='stylesheet')
+link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css' integrity='sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu' crossorigin='anonymous')
+
 
 block content
   .container
