--- a/views/add_article.pug
+++ b/views/add_article.pug
@@ -1,8 +1,9 @@
 extends layout
 
 block content
-  .container(style=' width: 1500px; margin-left:20rem;margin-top: 120px' )
+  .container(style=' width: 1500px;margin-top: 120px' )
     .row
+      .col-lg-2
       .col-lg-8
         h3 #{title}
         form(method='POST', action='/articles/add', enctype="multipart/form-data")
