--- a/views/index.pug
+++ b/views/index.pug
@@ -48,7 +48,7 @@ block content
               a(href='/articles/'+article._id)= article.title
               <br> #{article.body}
               <br> 모집기한 #{article.deadline}
-        button.btn.btn-warning(type='button' style='float:right; width:5rem; margin-right:1rem; margin-bottom:3rem' onclick="location.href='/articles/add'") 방 개설
+        button.btn.btn-warning(type='button' style='float:right; width:5rem; margin-top:1rem; margin-right:1rem; margin-bottom:3rem' onclick="location.href='/articles/add'") 방 개설
 
         // /.row
 
