수정부분 수정

--- a/views/edit_article.pug
+++ b/views/edit_article.pug
@@ -36,7 +36,7 @@ block content
             input.form-control(name='members', value=article.members)
           #form-group
             label 하고싶은 말
-            textarea.form-control(name='body', cols='30', rows='5')= article.body
+            textarea.form-control(name='comment', cols='30', rows='5')= article.comment
           
           br
           input.btn.btn-primary(type='submit',value='Submit')
