수정부분 pug author 삭제

--- a/views/edit_article.pug
+++ b/views/edit_article.pug
@@ -27,9 +27,9 @@ block content
           #form-group
             label 방제목
             input.form-control(name='title', type='text', value=article.title)
-          #form-group(style='display:none')
-            label author
-            input.form-control(name='author', type='text', value=article.author)
+          //- #form-group(style='display:none')
+          //-   label author
+          //-   input.form-control(name='author', type='text', value=article.author)
           //- // 사진 수정 추가해야함.
           #form-group
             label 모집 인원
