--- a/views/add_article.pug
+++ b/views/add_article.pug
@@ -50,6 +50,6 @@ block content
               option(value="15") 15
           #form-group
             label 기타
-            textarea.form-control(name='comment')
+            textarea.form-control(name='comment', cols='30', rows='5')
           br
           input.btn.btn-primary(type='submit',value='Submit', style='margin-bottom:5rem')
