--- a/views/index.pug
+++ b/views/index.pug
@@ -52,7 +52,7 @@ block content
 
         // /.row
 
-      .col-lg-1(style='margin-top:50px;')
+      .col-lg-1
         nav.navbar(class='navbar-expand-xl|lg|md|sm')
           ul.navbar-nav
             #cur_item
