드디어 사진이 올라갔어요ㅠ

--- a/views/article.pug
+++ b/views/article.pug
@@ -59,7 +59,7 @@ block content
       .col-lg-8
         .row(style='margin-top:50px')
           .col-lg-5
-            img(src="", alt='사진', width='80%')
+            img(src= article.picture_url, alt='사진', width='80%')
             div(align='center' style="margin-top:1rem")
               h5 개설자가 전해주는 말
               p #{article.comment}
