--- a/views/home/mypage.pug
+++ b/views/home/mypage.pug
@@ -38,11 +38,11 @@ block content
           tr
             td 아이디
             td
-              input.form-control(type='text' placeholder='#{user.id}' readonly='')
+              input.form-control(type='text' placeholder=user.id readonly='')
           tr
             td 이름
             td
-              input.form-control(type='text' placeholder= #{user.name} )
+              input.form-control(type='text' value=user.name )
           tr
             td 비밀번호 변경
             td
@@ -51,11 +51,11 @@ block content
           tr
             td 전화번호
             td
-              input.form-control(type='text' placeholder='010-1234-5678')
+              input.form-control(type='text' value=user.phone)
           tr
             td 주소
             td
-              input.form-control(type='text' placeholder='경기도 용인시 처인구 명지로123')
+              input.form-control(type='text' value=user.address)
         button.btn.btn-primary(type='button' style='float:right; margin-left: 1.5rem; margin-right:1rem; width:5rem') 변경
         button.btn.btn-warning(type='button' style='float:right;width:5rem') 초기화
 
