--- a/views/home/mypage.pug
+++ b/views/home/mypage.pug
@@ -38,7 +38,7 @@ block content
           tr
             td 아이디
             td
-              input.form-control(type='text' placeholder=user.id readonly='')
+              input.form-control(type='text' placeholder=user.username readonly='')
           tr
             td 이름
             td
