--- a/views/add_article.pug
+++ b/views/add_article.pug
@@ -9,10 +9,10 @@ block content
         form(method='POST', action='/articles/add', enctype="multipart/form-data")
           #form-group
             label 모집 마감일
-            input.form-control(name='deadline', type='date',min='2019-01-01')
+            input.form-control(name='deadline', type='date',min='2019-01-01' , required)
           #form-group
             label 카테고리
-            select#sel1.form-control(name="category")
+            select#sel1.form-control(name="category", required)
               option(value="") 카테고리를 선택하세요
               option(value="식자재") 식자재
               option(value="즉석식품") 즉석식품
@@ -23,17 +23,17 @@ block content
               option(value="기타") 기타
           #form-group
             label 품목
-            input.form-control(name='item', type='text') 
+            input.form-control(name='item', type='text', required)
           #form-group
             label 방 제목
-            input.form-control(name='title', type='text')  
+            input.form-control(name='title', type='text', required)
           #form-group
             label 사진
-            input.form-control-file.border(name='picture', type='file') 
+            input.form-control-file.border(name='picture', type='file', required)
           #form-group
             label 모집인원
-            select#sel1.form-control(name='members', type='text')
-              option(value="0") 모집할 인원을 선택하세요
+            select#sel1.form-control(name='members', type='text', required)
+              option(value="") 모집할 인원을 선택하세요
               option(value="2") 2
               option(value="3") 3
               option(value="4") 4
