--- a/views/edit_article.pug
+++ b/views/edit_article.pug
@@ -35,7 +35,7 @@ block content
             label 모집 인원
             //- input.form-control(name='members', value=article.members)
             select#sel1.form-control(name='members', type='text', value=article.members)
-              option(value= article.category) 모집할 인원을 선택하세요
+              option(value= article.members) 모집할 인원을 선택하세요
               option(value="2") 2
               option(value="3") 3
               option(value="4") 4
