모든 화면에서 동일한 화면 나오도록 수정(기기에 따라 화면 틀어짐 현상 개선 ), mypage 버튼 한글화

--- a/views/shared/_navbar.pug
+++ b/views/shared/_navbar.pug
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top
-  .container(style='margin-left:13rem; margin-right:1rem')
-    a.navbar-brand(href='/')
+  .container(style='width:100%; margin-right:auto')
+    a.navbar-brand(href='/', style='margin-left:40px')
       img(src='https://ifh.cc/g/HwdkM.jpg' alt='logo' width='200px')
     button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
