--- a/views/article.pug
+++ b/views/article.pug
@@ -18,7 +18,7 @@ extends layout
 //-       a.btn.btn-default(type='button' href='/articles/edit/'+article._id) 수정
 //-       a.btn.btn-danger.delete-article(href='#',data-id=article._id) 삭제
 block content
-  .container(style=' width: 1500px; margin-top: 100px')
+  .container(style='margin-top: 100px')
     .row
       .col-lg-3
         #login(style='margin-top:30px')
@@ -30,7 +30,7 @@ block content
                 .col-lg-7(style='margin-top:25px')
                   p(style='line-height:0%') #{user.name} 님,
                   | 환영합니다!
-                  p(style='margin-top:15px') 알림(1)
+                  p(style='margin-top:15px') 알림(0)
               .row(style="padding-top:20px")
                 .col-lg-6
                   button.btn.btn-primary.btn-block(type="button", style='width:100%', onclick="location.href='./mypage'") 내정보
