--- a/views/home/mypage.pug
+++ b/views/home/mypage.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-  .container(style=' width: 1500px; margin-top: 100px')  
+  .container(style='margin-top: 100px')  
     .row
       .col-lg-3
         #login(style='margin-top:30px')
@@ -13,7 +13,7 @@ block content
                 .col-lg-7(style='margin-top:25px')
                   p(style='line-height:0%') #{user.name} 님,
                   | 환영합니다!
-                  p(style='margin-top:15px') 알림(1)
+                  p(style='margin-top:15px') 알림(0)
               .row(style="padding-top:20px")
                 .col-lg-6
                   button.btn.btn-primary.btn-block(type="button", style='width:100%', onclick="location.href='./mypage'") 내정보
@@ -61,7 +61,7 @@ block content
               td
                 input.form-control(name='address' type='text' value=user.address)
           //- button.btn.btn-primary(type='button' style='float:right; margin-left: 1.5rem; margin-right:1rem; width:5rem') Submit
-          input.btn.btn-primary(type='submit',value='Submit')
+          input.btn.btn-primary(type='submit',value='변경', style='margin-left:20px')
 
 
       .col-lg-1(style='margin-top:50px;')
