회원가입required추가

--- a/views/register.pug
+++ b/views/register.pug
@@ -41,7 +41,7 @@ block content
             .input-group
               span.input-group-addon
                 i.glyphicon.glyphicon-user
-              input.form-control(name='name' placeholder='이름' type='text')
+              input.form-control(name='name' placeholder='이름' type='text', required)
 
         // Text input
         .form-group
@@ -50,7 +50,7 @@ block content
             .input-group
               span.input-group-addon
                 i.glyphicon.glyphicon-envelope
-              input.form-control(name='email' placeholder='email' type='text')
+              input.form-control(name='email' placeholder='email' type='text', required)
         // Text input
         .form-group
           label.col-md-4.control-label 아이디
@@ -58,7 +58,7 @@ block content
             .input-group
               span.input-group-addon
                 i.glyphicon.glyphicon-user
-              input.form-control(name='username' placeholder='아이디' type='text')
+              input.form-control(name='username' placeholder='아이디' type='text', required)
         // Text input
         .form-group
           label.col-md-4.control-label 비밀번호 
@@ -66,7 +66,7 @@ block content
             .input-group
               span.input-group-addon
                 i.glyphicon.glyphicon-lock
-              input.form-control(name='password' placeholder='비밀번호' type='password')
+              input.form-control(name='password' placeholder='비밀번호' type='password', required)
         // Text input
         .form-group
           label.col-md-4.control-label 비밀번호 확인
@@ -74,7 +74,7 @@ block content
             .input-group
               span.input-group-addon
                 i.glyphicon.glyphicon-question-sign
-              input.form-control(name='password2' placeholder='비밀번호 확인' type='password')
+              input.form-control(name='password2' placeholder='비밀번호 확인' type='password', required)
         // Text input
         .form-group
           label.col-md-4.control-label 전화번호
@@ -82,14 +82,14 @@ block content
             .input-group
               span.input-group-addon
                 i.glyphicon.glyphicon-earphone
-              input.form-control(name='phone' placeholder='전화번호' type='text')
+              input.form-control(name='phone' placeholder='전화번호' type='text', required)
         .form-group
           label.col-md-4.control-label 주소
           .col-md-4.inputGroupContainer
             .input-group
               span.input-group-addon
                 i.glyphicon.glyphicon-home
-              input.form-control(name='address' placeholder='주소' type='text')
+              input.form-control(name='address' placeholder='주소' type='text', required)
         // Select Basic
         // Success message
         
