--- a/views/index.pug
+++ b/views/index.pug
@@ -54,7 +54,7 @@ block content
 
         // /.row
 
-      .col-lg-1
+     // .col-lg-1
         nav.navbar(class='navbar-expand-xl|lg|md|sm')
           ul.navbar-nav
             #cur_item
