--- a/views/shared/_navbar.pug
+++ b/views/shared/_navbar.pug
@@ -18,7 +18,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top
         li.nav-item.active
           a.nav-link(href='#' , style='margin-left:10px;')
     
-      form.form-inline(action='http://www.naver.com')
+      form.form-inline(method='POST' action='search/:item')
         input.form-control(type='text' placeholder='검색하실 내용을 입력하세요' style='width:25rem; height:3.2rem')
         button.btn.btn-light(type='submit' style='height:3.2rem;margin-right:8rem')
           img(src='https://image.flaticon.com/icons/svg/149/149852.svg' alt='search icon' width='25px')
