개설날짜출력양식수정

--- a/views/add_article.pug
+++ b/views/add_article.pug
@@ -8,6 +8,9 @@ block content
         h3 #{title}
         form(method='POST', action='/articles/add', enctype="multipart/form-data")
           #form-group
+            label 시작 날짜
+            input.form-control(name='startdate', type='date', min='2019-01-01' , required)
+          #form-group
             label 모집 마감일
             input.form-control(name='deadline', type='date',min='2019-01-01' , required)
           #form-group
