--- a/views/article.pug
+++ b/views/article.pug
@@ -80,7 +80,7 @@ block content
                   td #{author}
                 tr
                   td 개설일자
-                  td #{article.createdAt}
+                  td #{article.startdate}
                 tr
                   td 마감일자
                   td #{article.deadline}
