--- a/views/index.pug
+++ b/views/index.pug
@@ -52,28 +52,28 @@ block content
               <br> 모집기한 #{article.deadline}
         button.btn.btn-warning(type='button' style='float:right; width:5rem; margin-top:1rem; margin-right:1rem; margin-bottom:3rem' onclick="location.href='/articles/add'") 방 개설
 
-        // /.row
+    //-     // /.row
 
-     // .col-lg-1
-        nav.navbar(class='navbar-expand-xl|lg|md|sm')
-          ul.navbar-nav
-            #cur_item
-              h5(style='text-align:center') 최근목록
-                li.nav-item
-                  a.nav-link(href='#', style='color:black')
-                    img(src='images/potato.jpg')
-                    | 알감자
-                li.nav-item
-                  a.nav-link(href='#', style='color:black')
-                    img(src='images/fish.jpg')
-                    //-이 밑에 주석은 혹시 모르니까 남겨놔 주세요~ 
-                    //-img(src='picture/9437d3e417037c1b221518d08832782f')
-                    | 고등어
-                li.nav-item
-                  a.nav-link(href='#', style='color:black')
-                    img(src='images/pororo.jpg')
-                    | 뽀로로 인형
-                li.nav-item
-                  a.nav-link(href='#', style='color:black')
-                    img(src='images/knife.jpg')
-                    | 장미칼
+    //-  // .col-lg-1
+    //-     nav.navbar(class='navbar-expand-xl|lg|md|sm')
+    //-       ul.navbar-nav
+    //-         #cur_item
+    //-           h5(style='text-align:center') 최근목록
+    //-             li.nav-item
+    //-               a.nav-link(href='#', style='color:black')
+    //-                 img(src='images/potato.jpg')
+    //-                 | 알감자
+    //-             li.nav-item
+    //-               a.nav-link(href='#', style='color:black')
+    //-                 img(src='images/fish.jpg')
+    //-                 //-이 밑에 주석은 혹시 모르니까 남겨놔 주세요~ 
+    //-                 //-img(src='picture/9437d3e417037c1b221518d08832782f')
+    //-                 | 고등어
+    //-             li.nav-item
+    //-               a.nav-link(href='#', style='color:black')
+    //-                 img(src='images/pororo.jpg')
+    //-                 | 뽀로로 인형
+    //-             li.nav-item
+    //-               a.nav-link(href='#', style='color:black')
+    //-                 img(src='images/knife.jpg')
+    //-                 | 장미칼
