--- a/views/home/mypage.pug
+++ b/views/home/mypage.pug
@@ -64,26 +64,26 @@ block content
           input.btn.btn-primary(type='submit',value='변경', style='margin-left:20px')
 
 
-      .col-lg-1(style='margin-top:50px;')
-        nav.navbar(class='navbar-expand-xl|lg|md|sm')
-          ul.navbar-nav
-            #cur_item
-              h5(style='text-align:center') 최근목록
-                li.nav-item
-                  a.nav-link(href='#', style='color:black')
-                    img(src='images/potato.jpg')
-                    | 알감자
-                li.nav-item
-                  a.nav-link(href='#', style='color:black')
-                    img(src='images/fish.jpg')
-                    //-이 밑에 주석은 혹시 모르니까 남겨놔 주세요~ 
-                    //-img(src='picture/9437d3e417037c1b221518d08832782f')
-                    | 고등어
-                li.nav-item
-                  a.nav-link(href='#', style='color:black')
-                    img(src='images/pororo.jpg')
-                    | 뽀로로 인형
-                li.nav-item
-                  a.nav-link(href='#', style='color:black')
-                    img(src='images/knife.jpg')
-                    | 장미칼
+      //- .col-lg-1(style='margin-top:50px;')
+      //-   nav.navbar(class='navbar-expand-xl|lg|md|sm')
+      //-     ul.navbar-nav
+      //-       #cur_item
+      //-         h5(style='text-align:center') 최근목록
+      //-           li.nav-item
+      //-             a.nav-link(href='#', style='color:black')
+      //-               img(src='images/potato.jpg')
+      //-               | 알감자
+      //-           li.nav-item
+      //-             a.nav-link(href='#', style='color:black')
+      //-               img(src='images/fish.jpg')
+      //-               //-이 밑에 주석은 혹시 모르니까 남겨놔 주세요~ 
+      //-               //-img(src='picture/9437d3e417037c1b221518d08832782f')
+      //-               | 고등어
+      //-           li.nav-item
+      //-             a.nav-link(href='#', style='color:black')
+      //-               img(src='images/pororo.jpg')
+      //-               | 뽀로로 인형
+      //-           li.nav-item
+      //-             a.nav-link(href='#', style='color:black')
+      //-               img(src='images/knife.jpg')
+      //-               | 장미칼
