--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,8 @@ block content
                 .col-lg-5
                   img(src='../image/smile.png', width='100px', style="margin-left:5px;margin-top:5px")
                 .col-lg-7(style='margin-top:25px')
-                  p(style='line-height:0%') #{user.name} 님,
+                  p(style='line-height:0%') 
+                    b #{user.name} 님,
                   | 환영합니다!
                   p(style='margin-top:15px') 알림(0)
               .row(style="padding-top:20px")
@@ -45,11 +46,16 @@ block content
         ul.list-group
           each article, i in articles
             li.list-group-item
-              a(href='/articles/'+article._id)= article.title
+              b
+                a(href='/articles/'+article._id)= article.title
               <br>
               img(src= article.picture_url, width='30%')
-              <br> #{article.comment}
-              <br> 모집기한 #{article.deadline}
+              <br> 
+                b #{article.comment}
+              <br>
+                b 개설일자 #{article.startdate}
+              <br> 
+                b(style= "color: red") 마감일자 #{article.deadline}
         button.btn.btn-warning(type='button' style='float:right; width:5rem; margin-top:1rem; margin-right:1rem; margin-bottom:3rem' onclick="location.href='/articles/add'") 방 개설
 
     //-     // /.row
