--- a/views/index.pug
+++ b/views/index.pug
@@ -43,19 +43,18 @@ block content
     
       // slide bar & banner-
       #cent-menu.col-lg-8
-        ul.list-group
-          each article, i in articles
-            li.list-group-item
-              b
-                a(href='/articles/'+article._id)= article.title
-              <br>
-              img(src= article.picture_url, width='30%')
-              <br> 
-                b #{article.comment}
-              <br>
-                b 개설일자 #{article.startdate}
-              <br> 
-                b(style= "color: red") 마감일자 #{article.deadline}
+        .row
+          each article in articles
+            .col-lg-4(style='float:left; margin-bottom:20px')
+              .card(style="width:100%;height:23rem", align="center")
+                img.card-img-top(src=article.picture_url alt='picture')
+                .card-body
+                  h5.card-title
+                    a(href='/articles/'+article._id)=article.title
+                  p #{article.members} 명 모집            
+                  p #{article.deadline} 까지
+                
+
         button.btn.btn-warning(type='button' style='float:right; width:5rem; margin-top:1rem; margin-right:1rem; margin-bottom:3rem' onclick="location.href='/articles/add'") 방 개설
 
     //-     // /.row
