인덱스 수정 및 식자재 UI구현 / 나머지 카테고리도 해줘야함

--- a/views/category/grocery.pug
+++ b/views/category/grocery.pug
@@ -1,4 +1,4 @@
-extends layout
+extends ../layout
 
 block content
   .container(style='margin-top: 100px')
@@ -40,9 +40,9 @@ block content
           button.btn-ctg 커피/차
           button.btn-ctg 해외직구
           button.btn-ctg 기타
-    
-      // slide bar & banner-
       #cent-menu.col-lg-8
+        .row
+          h2(style='margin-left:30px; margin-bottom:20px') 식자재
         .row
           each article in articles
             .col-lg-4(style='float:left; margin-bottom:20px')
@@ -53,32 +53,3 @@ block content
                     a(href='/articles/'+article._id)=article.title
                   p #{article.members} 명 모집            
                   p #{article.deadline} 까지
-                
-
-        button.btn.btn-warning(type='button' style='float:right; width:5rem; margin-top:1rem; margin-right:1rem; margin-bottom:3rem' onclick="location.href='/articles/add'") 방 개설
-
-    //-     // /.row
-
-    //-  // .col-lg-1
-    //-     nav.navbar(class='navbar-expand-xl|lg|md|sm')
-    //-       ul.navbar-nav
-    //-         #cur_item
-    //-           h5(style='text-align:center') 최근목록
-    //-             li.nav-item
-    //-               a.nav-link(href='#', style='color:black')
-    //-                 img(src='images/potato.jpg')
-    //-                 | 알감자
-    //-             li.nav-item
-    //-               a.nav-link(href='#', style='color:black')
-    //-                 img(src='images/fish.jpg')
-    //-                 //-이 밑에 주석은 혹시 모르니까 남겨놔 주세요~ 
-    //-                 //-img(src='picture/9437d3e417037c1b221518d08832782f')
-    //-                 | 고등어
-    //-             li.nav-item
-    //-               a.nav-link(href='#', style='color:black')
-    //-                 img(src='images/pororo.jpg')
-    //-                 | 뽀로로 인형
-    //-             li.nav-item
-    //-               a.nav-link(href='#', style='color:black')
-    //-                 img(src='images/knife.jpg')
-    //-                 | 장미칼
